[metadata]
name = dandi-io
description = Remote access to data stored on DANDI
long_description = file:README.md
author = Yael Balbastre
author_email = ybalbastre@mgh.harvard.edu

[options]
python_requires = >= 3.6
install_requires =
    dandi
    fsspec
    requests
    numpy
    scipy
    dask
    aicsimageio
    tifffile
    nibabel
    xmlschema
    h5py
