[metadata]
name = dandiio
description = Remote access to data stored on DANDI
long_description = file:README.md
author = Yael Balbastre
author_email = ybalbastre@mgh.harvard.edu

[options]
python_requires = >= 3.6
install_requires =
    dandi >= 0.44  # required for `get_assets_by_glob`
    fsspec
    requests
    numpy
    scipy
    dask
    kerchunk
    aicsimageio
    tifffile
    nibabel
    xmlschema
    h5py
    aiohttp
    neuroglancer

entry_points={
    'fsspec.specs': [
        'dandi=dandiio.dandifs.RemoteDandiFileSystem',
    ],
},
